[package]
name = "actix-identity-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
actix-session = { version = "0.9.0", features=["cookie-session"] }
actix-identity = "0.7.1"
actix-utils = "3.0.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
env_logger = "0.11.3"
